--- a/waku.html
+++ b/waku.html
@@ -5,8 +5,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>wakugumi</title>
+  <link rel="stylesheet" href="waku.css">
 </head>
 <body>
+   <div class="header">
+      <div class="header-logo"></div>
+      <div class="header-visual"></div>
+
+   </div>
   
+   <div class="main">
+
+      <div class="main1"></div>
+      <div class="main2"></div>
+      <div class="main3"></div>
+
+   </div>
+  <div class="footer"></div>
 </body>
 </html>
